# 3W_revamped

./: .env.example  .gitignore  3W+.spec  AWS.md  README.md  deploy.sh  launcher.py
.claude/: launch.json
backend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements-lock.txt
backend/app/: main.py
backend/app/agent/: graph.py  llm.py  router.py  schemas.py  tools.py
backend/app/analytics/: db.py  router.py  service.py
backend/app/annotations/: models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/chat/: models.py  router.py  schemas.py  service.py
backend/app/core/: all_models.py  config.py  db.py
backend/app/coverage/: buildings.py  indoor_service.py  router.py  schemas.py  service.py
backend/app/datamgmt/: router.py  schemas.py  service.py
backend/app/geoserver/: router.py  service.py
backend/app/ingestion/: capex_solver.py  dag.py  parquet_safe.py  parquet_store.py  sql_macros.py  storage.py
backend/app/ingestion/stages/: capex_upgrades.py  cd_combined_result.py  cell_reference.py  congestion_analysis.py  coverage_holes.py  forecast_results.py  pre_capex_upgrades.py  site_coordinates.py  site_coverage_params.py  xc_huawei.py  xd_zte.py
backend/app/pricing/: models.py  router.py  schemas.py  service.py
backend/app/rag/: models.py  router.py  schemas.py  service.py
backend/app/reviews/: models.py  router.py  schemas.py  service.py
backend/app/siteplanning/: cctv.py  electric_poles.py  genset.py  router.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_users_and_login_history.py  0002_annotations.py  0003_chat.py  0004_pricing_and_reviews.py  0005_rag_knowledge_chunks.py  0006_projects_tasks_restructure.py  0007_pricing_range.py  0008_task_multi_assignee.py  6752d63cc595_user_avatar_url.py
backend/scripts/: run_real_etl.py
backend/tests/: conftest.py  test_agent_graph.py  test_agent_llm.py  test_agent_tools.py  test_analytics_api.py  test_analytics_service.py  test_annotations.py  test_annotations_api.py  test_auth.py  test_capex_solver.py  test_capex_upgrades.py  test_cctv.py  test_cd_combined_result.py  test_cell_reference.py  test_chat.py  test_chat_api.py  test_congestion_analysis.py  test_coverage_holes.py  test_dag.py  test_datamgmt.py  test_datamgmt_api.py  test_forecast_results.py  test_genset.py  test_pre_capex_upgrades.py  test_pricing.py  test_pricing_api.py  test_rag.py  test_rag_api.py  test_reviews.py  test_site_coordinates.py  test_site_coverage_params.py  test_siteplanning_api.py  test_xc_huawei.py  test_xd_zte.py
docs/: REBUILD_PLAN.md  user_manual.html
frontend/: README.md  (+5 more)
(+54 files in other folders)
