[project]
name = "3w-backend"
version = "0.1.0"
description = "3W Revamped backend (FastAPI)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "duckdb>=1.0",
    "pyjwt>=2.8",
    "bcrypt>=4.2",
    "boto3>=1.34",
    "pyxlsb>=1.0",
    "openpyxl>=3.1",
    "pyarrow>=17.0",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "email-validator>=2.2",
    "geopandas>=1.0",
    "scipy>=1.13",
    "osmnx>=1.9",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
